“Java 方法覆盖与Java 方法重载”笔误修正

--- a/docs/java/38.md
+++ b/docs/java/38.md
@@ -155,10 +155,10 @@ class Main {
 
 * * *
 
-### Java 方法重载与方法重载
+### Java 方法覆盖与Java 方法重载
 
-*   在方法重载的情况下，方法应位于不同的类内。 而在方法重载的情况下，方法应位于同一类内。
-*   方法重载在运行时执行，而方法重载在编译时执行。
+*   在方法覆盖的情况下，方法应位于不同的类内。 而在方法重载的情况下，方法应位于同一类内。
+*   方法覆盖在运行时执行，而方法重载在编译时执行。
 
 * * *
 
