Added a useful link
Have added a useful link about For loop in C from the scaler topics.

--- a/docs/c/79.md
+++ b/docs/c/79.md
@@ -29,7 +29,7 @@ int main() {
 A B C D E F G H I J K L M N O P Q R S T U V W X Y Z 
 ```
 
-在此程序中，`for`循环用于以大写字母显示英文字母。
+在此程序中，[`for`循环](https://www.scaler.com/topics/c/for-loop-in-c/)用于以大写字母显示英文字母。
 
 这是上述程序的一些修改。 该程序根据用户给出的输入以大写或小写形式显示英文字母。
 
